Fix: grid columns on large gives too much whitespace
So now the grid stops it's horizontal feature at the xl (1200px) point

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -772,7 +772,7 @@ form .success input:focus, form .success textarea:focus {
 .horizontal-grid div {
   scroll-snap-align: center;
 }
-@media (min-width: 990px) {
+@media (min-width: 1200px) {
   .horizontal-grid {
     justify-content: center;
     flex-wrap: wrap;
